--- a/app/Resources/views/cours/one.html.twig
+++ b/app/Resources/views/cours/one.html.twig
@@ -574,7 +574,7 @@
                                                                             </td>
                                                                         </tr>
                                                                     {% endif %}
-                                                                    {% if val.zones.copie[keyR] %}
+                                                                    {% if val.zones.copie[keyR] != "undefined" %}
 
                                                                         {% if val.zones.copie[keyR].note %}
                                                                             <tr class="itemTitle">
