--- a/app/Resources/views/discipline/myCourses.html.twig
+++ b/app/Resources/views/discipline/myCourses.html.twig
@@ -163,6 +163,33 @@
                                                 </div>
                                             {% endfor %}
                                         {% endif %}
+                                        {% if val.sessionsAdmin is defined %}
+                                            {% for keyC,valC in val.sessionsAdmin %}
+                                                <div class="course-list course-session" data-idCours="{{ valC.id }}" style="margin-top: 0; opacity: .6;">
+                                                    <div class="course-media">
+                                                        <img src="{{ asset('images/cours/') }}{{ valC.imageFilename }}" class="img-responsive course-img" alt="">
+                                                    </div>
+                                                    <div class="course-detail">
+                                                        <h4 class="heading">{{ valC.nom }}</h4>
+                                                        <ul class="course-features">
+                                                            <li><i class="fa fa-map-marker"></i> À distance</li>
+                                                            <br/>
+                                                            {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
+                                                                <li><i class="fa fa-hourglass-start"></i> {{ valC.session.dateDebut|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}</li>
+                                                            {% endif %}
+                                                            <li><i class="fa fa-hourglass-end"></i> {{ valC.session.dateFin|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}</li>
+                                                            {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
+                                                                <br/>
+                                                                <li><i class="fa fa-bell-o" aria-hidden="true"></i> {{ valC.session.dateDebutAlerte|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}</li>
+                                                                <li><i class="fa fa-bell-slash-o" aria-hidden="true"></i> {{ valC.session.dateFinAlerte|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}</li>
+                                                            {% endif %}
+                                                        </ul>
+                                                        <p class="brief">{{ valC.description|raw }}</p>
+                                                        <a href="{{ path('oneCours', {id: valC.id, mode: 'etu'}) }}" class="btn btn-primary btn-sm">Entrer</a>
+                                                    </div>
+                                                </div>
+                                            {% endfor %}
+                                        {% endif %}
                                         {% if val.sessionsAlerte is defined %}
                                             {% for keyC,valC in val.sessionsAlerte %}
                                                 <div class="course-list course-sessionAlerte"  data-idCours="{{ valC.id }}" data-idSession="{{ valC.session.id }}" style="margin-top: 0;">
