--- a/app/Resources/views/user/myProfile.html.twig
+++ b/app/Resources/views/user/myProfile.html.twig
@@ -135,12 +135,12 @@
                 {{ form_errors(form) }}
             </div>
             <div class="formRow">
-                {{ form_label(form.nom) }}
-                {{ form_widget(form.nom) }}
+                {{ form_label(form.lastname) }}
+                {{ form_widget(form.lastname) }}
             </div>
             <div class="formRow">
-                {{ form_label(form.prenom) }}
-                {{ form_widget(form.prenom) }}
+                {{ form_label(form.firstname) }}
+                {{ form_widget(form.firstname) }}
             </div>
             <div class="formRow">
                 {{ form_label(form.email) }}
@@ -155,8 +155,8 @@
                 {{ form_widget(form.plainPassword.second) }}
             </div>
             <div class="formRow">
-                {{ form_label(form.notifs) }}
-                {{ form_widget(form.notifs) }}
+                {{ form_label(form.receiveAutoNotifs) }}
+                {{ form_widget(form.receiveAutoNotifs) }}
             </div>
             <div class="formRow lastRow">
                 {{ form_label(form.institut) }}
