--- a/app/Resources/views/emailNotif.html.twig
+++ b/app/Resources/views/emailNotif.html.twig
@@ -1,7 +1,7 @@
 <p>Bonjour {{ prenom }} {{ nom }}!</p>
 
 
-{{ contenuDocuments }}
+{{ contenuDocuments|raw }}
 
 <p>Merci!</p>
 <p>L'équipe AFADEC</p>
