--- a/app/Resources/views/stats/statsDocsByUserDisc.html.twig
+++ b/app/Resources/views/stats/statsDocsByUserDisc.html.twig
@@ -39,6 +39,7 @@
                     })
                     .tablesorterPager({
                         container: $("#pager"),
+                        output: 'de {startRow} à {endRow} sur {totalRows} lignes',
                         size: 50
                     });
         });
@@ -95,7 +96,7 @@
                             <option value="20">20</option>
                             <option value="30">30</option>
                             <option value="40">40</option>
-                            <option value="all">All Rows</option>
+                            <option value="all">Toutes les lignes</option>
                         </select>
                         <button class="download">Télécharger le CSV</button>
                     </form>
