--- a/app/Resources/views/ressources/allDiscCours.html.twig
+++ b/app/Resources/views/ressources/allDiscCours.html.twig
@@ -26,6 +26,7 @@
                     })
                     .tablesorterPager({
                         container: $("#pager"),
+                        output: 'de {startRow} à {endRow} sur {totalRows} lignes',
                         size: 50
                     });
         });
@@ -68,7 +69,7 @@
                             <option value="20">20</option>
                             <option value="30">30</option>
                             <option value="40">40</option>
-                            <option value="all">All Rows</option>
+                            <option value="all">Toutes les lignes</option>
                         </select>
                     </form>
                 </div>
