--- a/app/Resources/views/ressources/oneDevoir.html.twig
+++ b/app/Resources/views/ressources/oneDevoir.html.twig
@@ -43,6 +43,7 @@
                 })
                 .tablesorterPager({
                     container: $("#pager"),
+                    output: 'de {startRow} à {endRow} sur {totalRows} lignes',
                     size: 50
                 });
         });
@@ -107,7 +108,7 @@
                             <option value="20">20</option>
                             <option value="30">30</option>
                             <option value="40">40</option>
-                            <option value="all">All Rows</option>
+                            <option value="all">Toutes les lignes</option>
                         </select>
                         <button class="download">Télécharger le CSV</button>
                     </form>
