--- a/app/Resources/views/user/activation.html.twig
+++ b/app/Resources/views/user/activation.html.twig
@@ -19,11 +19,11 @@
 
                 <p>Bonjour {{ user.firstname }} {{ user.lastname }}! Votre compte est bien activé.</p>
 
-                {% set datetimeStart = '2017-07-01' %}
-                {% if "now"|date('Y-m-d') >= datetimeStart|date('Y-m-d') %}
-                    <p>Vous pouvez maintenant vous authentifier sur <a href="{{ path('homepage') }}">la page d'accueil</a></p>
-                {% else %}
-                    <p>Vous serez averti prochainement de l’ouverture de la plateforme.</p>
+                <p>Vous pouvez maintenant vous authentifier sur <a href="{{ path('homepage') }}">la page d'accueil</a></p>
+
+                {% if not user.confirmedByAdmin %}
+                    <p>Attention ! Vous avez choisi un statut {{ user.statut }}.</p>
+                    <p>Ce statut vous donne droit à des fonctionnalités supplémentaires. Elles seront actives lorsque l'administrateur de l'AFADEC aura confirmé votre compte. Vous serez averti dans les 24h de cette confirmation.</p>
                 {% endif %}
 
                 <p>Merci!</p>
