--- a/app/Resources/views/user/add.html.twig
+++ b/app/Resources/views/user/add.html.twig
@@ -13,7 +13,7 @@
 
 {% block main %}
     <style>
-        #form > div {
+        /*#form > div {
             margin-bottom: 15px;
         }
 
@@ -43,6 +43,45 @@
 
         input[type=checkbox]:not(:first-child) {
             margin-left: 15px;
+        }*/
+        .formRow{
+            width: 600px;
+            display: flex;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            flex-direction: row;
+            -webkit-flex-direction: row;
+            -webkit-box-orient: horizontal;
+            justify-content: flex-start;
+            -webkit-justify-content: flex-start;
+            align-items: center;
+            -webkit-align-items: center;
+            height: 35px;
+        }
+        .formRow label{
+            width: 300px;
+            text-align: right;
+        }
+        .formRow input{
+            flex: 1;
+            -webkit-box-flex: 1;
+            -webkit-flex: 1;
+            -ms-flex: 1;
+        }
+        .formRow select{
+            width: 220px;
+        }
+        #form_submit{
+            margin: auto;
+            margin-top: 30px;
+        }
+        .alertTypeUserValidation{
+            display: none;
+            background-color: #8ec780;
+            padding: 10px 15px;
+            border-radius: 5px;
+            border: 1px solid #48753d;
+            margin: 10px 0;
         }
     </style>
 
@@ -65,12 +104,12 @@
             loadEtudiant();
 
             $('#form_typeUser').on('change', function () {
-                if ($(this).val() == 0) {
+                if ($(this).val() === 'Etudiant') {
                     loadEtudiant();
-                } else if ($(this).val() == 1) {
+                } else if ($(this).val() === 'Formateur' || $(this).val() === 'Responsable') {
                     loadFormateur();
                 } else {
-                    loadProf();
+                    loadProfStagiaire();
                 }
             });
             $('#form_concours').on('change', function () {
@@ -96,19 +135,24 @@
                 $('#form_sectionEns').parent().hide();
                 $('#form_matiereEtu, #form_matiereForm, #form_matiereProfStag').parent().hide();
                 $('#form_concours').parent().show().val(0);
+                $('.alertTypeUserValidation').hide();
             }
 
             function loadFormateur() {
                 $('#form_sectionEns').parent().show();
                 $('#form_matiereEtu, #form_matiereForm, #form_matiereProfStag').parent().hide();
                 $('#form_concours').parent().hide();
+
+                // validation du compte par l'admin, il faut prévenir le user
+                $('.alertTypeUserValidation').show();
             }
 
-            function loadProf() {
+            function loadProfStagiaire() {
                 $('#form_sectionEns').parent().hide();
                 $('#form_matiereEtu, #form_matiereForm').parent().hide();
                 $('#form_matiereProfStag').parent().show();
                 $('#form_concours').parent().hide();
+                $('.alertTypeUserValidation').hide();
             }
 
         });
@@ -131,15 +175,63 @@
 
             <p>Créez votre compte à l’aide du formulaire ci-dessous.</p>
 
-            <p>En cas de problème ou de question : <a class="studitBlueFC" href="mailTo:contact.afadec@gmail
-                .com">contact.afadec@gmail.com</a></p>
+            <p>En cas de problème ou de question : <a class="studitBlueFC" href="mailTo:contact.afadec@gmail.com">contact.afadec@gmail.com</a>
+            </p>
         </div>
         <div>
             <h4 class="heading">Renseigner <span class="color2">mes informations</span></h4>
 
-            <div class="container">
+            <div class="container mb-40">
                 <div class="row">
-                    {{ form(form) }}
+                    {{ form_start(form) }}
+                    <div class="formRow">
+                        {{ form_label(form.nom) }}{{ form_widget(form.nom) }}
+                    </div>
+                    <div class="formRow">
+                        {{ form_label(form.prenom) }}{{ form_widget(form.prenom) }}
+                    </div>
+                    <div class="formRow">
+                        {{ form_label(form.email) }}{{ form_widget(form.email) }}
+                    </div>
+                    <div class="formRow">
+                        {{ form_label(form.phone) }}{{ form_widget(form.phone) }}
+                    </div>
+                    <div class="formRow">
+                        {{ form_label(form.mdp.first) }}{{ form_widget(form.mdp.first) }}
+                    </div>
+                    <div class="formRow">
+                        {{ form_label(form.mdp.second) }}{{ form_widget(form.mdp.second) }}
+                    </div>
+                    <div class="formRow">
+                        {{ form_label(form.institut) }}{{ form_widget(form.institut) }}
+                    </div>
+                    <div class="alertTypeUserValidation">
+                        Attention, les statuts "Formateur" et "Administrateur" permettent des fonctionnalités additionnelles dans la plateforme.
+                        De ce fait, votre compte devra être confirmé par les administrateurs de l'Afadec. L'activation de votre compte ne sera pas instantannée mais pourra prendre jusqu'à 24h.
+                        Merci pour votre compréhension.
+                    </div>
+                    <div class="formRow">
+                        {{ form_label(form.typeUser) }}{{ form_widget(form.typeUser) }}
+                    </div>
+                    <div class="formRow">
+                        {{ form_label(form.concours) }}{{ form_widget(form.concours) }}
+                    </div>
+                    <div class="formRow">
+                        {{ form_label(form.sectionEns) }}{{ form_widget(form.sectionEns) }}
+                    </div>
+                    <div class="formRow">
+                        {{ form_label(form.matiereEtu) }}{{ form_widget(form.matiereEtu) }}
+                    </div>
+                    <div class="formRow">
+                        {{ form_label(form.matiereForm) }}{{ form_widget(form.matiereForm) }}
+                    </div>
+                    <div class="formRow">
+                        {{ form_label(form.matiereProfStag) }}{{ form_widget(form.matiereProfStag) }}
+                    </div>
+                    <div class="formRow center">
+                        {{ form_widget(form.submit) }}
+                    </div>
+                    {{ form_end(form) }}
                 </div>
             </div>
         </div>
