--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -25,6 +25,33 @@ body{
     margin-bottom: 8px;
 }
 
+.AlertNotValidatedByAdmin{
+    position: absolute;
+    bottom: -35px;
+    right: 10px;
+    background: #209e07;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 10px;
+}
+.adminAlertUsersToValidate{
+    display: none;
+    position: absolute;
+    bottom: -35px;
+    right: 10px;
+    background: #9e0003;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 10px;
+}
+
+/* Confirmation des statuts spéciaux */
+.btnConfirmStatut{
+    color: #0ca200;
+}
+.btnRefuseStatut{
+    color: #c61400;
+}
 
 /* footer */
 .affiliations > li{
